...
                  const SizedBox(
                    height: 45,
                  ),

                  // email textfield
                  MyTextField(
                      key: const Key('email_text_field'),
                      hint: "Email",
                      controller: _emailController),

                  const SizedBox(
                    height: 15,
                  ),

                  //password textfield
                  MyTextField(
                    key: const Key('password_text_field'),
                    hint: "Password",
                    controller: _passwordController,
                    isPassword: true,
                  ),

                  //forgot password
...
                  ),

                  SizedBox(
                    height: 88,
                    width: 566,
                    child: ElevatedButton(
                      key: const Key('sign_in_button'),
                      style: ElevatedButton.styleFrom(
                        textStyle: const TextStyle(
                          fontSize: 32,
                          fontWeight: FontWeight.bold,
                        ),
                        foregroundColor: Colors.white,
...
