...
              onTap: () =>
                  Navigator.of(context).pushReplacement(MaterialPageRoute(
                builder: (context) => const VisualTimetableInterface(),
              )),
            ),
            ListTile(
              key: const Key("childMode"),
              leading: const Icon(Icons.child_care),
              title: const Text('Activate Child Mode'),
              onTap: () => Navigator.of(context).pushReplacement(
                  MaterialPageRoute(
                      builder: (context) => const ChildInterface())),
            ),
...
